# insta-data-science

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.repo_name }}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dvc.yaml  environment.yml  params.yaml
{{ cookiecutter.repo_name }}/.circleci/: config.yml
